--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="container">
                 <div class="hero__content">
                     <div class="hero__photo">
-                        <img src="/img/20240616_205740(1).jpg" alt="" class="hero__photo-img">
+                        <img src="../img/20240616_205740(1).jpg" alt="" class="hero__photo-img">
                     </div>
                     <div class="hero__about">
                         <h1>A little about me</h1>
