--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="container">
                 <div class="hero__content">
                     <div class="hero__photo">
-                        <img src="../img/20240616_205740(1).jpg" alt="" class="hero__photo-img">
+                        <img src="img/20240616_205740(1).jpg" alt="" class="hero__photo-img">
                     </div>
                     <div class="hero__about">
                         <h1>A little about me</h1>
@@ -40,47 +40,47 @@
                 <ul class="projects-list">
                     <li class="project">
                         <div class="project__content" data-index="0" data-toggle="info-popup">
-                            <img src="/img/project-img1.webp" alt="" class="project__img" width="445" height="220">
+                            <img src="img/project-img1.webp" alt="" class="project__img" width="445" height="220">
                         </div>
                     </li>
                     <li class="project">
                         <div class="project__content" data-index="1" data-toggle="info-popup">
-                            <img src="/img/project-img2.webp" alt="" class="project__img" width="445" height="220">
+                            <img src="img/project-img2.webp" alt="" class="project__img" width="445" height="220">
                         </div>
                     </li>
                     <li class="project">
                         <div class="project__content" data-index="2" data-toggle="info-popup">
-                            <img src="/img/project-img3.webp" alt="" class="project__img" width="445" height="220">
+                            <img src="img/project-img3.webp" alt="" class="project__img" width="445" height="220">
                         </div>
                     </li>
                     <li class="project">
                         <div class="project__content" data-index="4" data-toggle="info-popup">
-                            <img src="/img/project-img5.webp" alt="" class="project__img" width="445" height="220">
+                            <img src="img/project-img5.webp" alt="" class="project__img" width="445" height="220">
                         </div>
                     </li>
                     <li class="project">
                         <div class="project__content" data-index="5" data-toggle="info-popup">
-                            <img src="/img/project-img6.webp" alt="" class="project__img" width="445" height="220">
+                            <img src="img/project-img6.webp" alt="" class="project__img" width="445" height="220">
                         </div>
                     </li>
                     <li class="project">
                         <div class="project__content" data-index="6" data-toggle="info-popup">
-                            <img src="/img/project-img7.webp" alt="" class="project__img" width="445" height="220">
+                            <img src="img/project-img7.webp" alt="" class="project__img" width="445" height="220">
                         </div>
                     </li>
                     <li class="project">
                         <div class="project__content" data-index="3" data-toggle="info-popup">
-                            <img src="/img/project-img4.webp" alt="" class="project__img" width="445" height="220">
+                            <img src="img/project-img4.webp" alt="" class="project__img" width="445" height="220">
                         </div>
                     </li>
                     <li class="project">
                         <div class="project__content" data-index="7" data-toggle="info-popup">
-                            <img src="/img/project-img8.webp" alt="" class="project__img" width="445" height="220">
+                            <img src="img/project-img8.webp" alt="" class="project__img" width="445" height="220">
                         </div>
                     </li>
                     <li class="project">
                         <div class="project__content" data-index="8" data-toggle="info-popup">
-                            <img src="/img/project-img9.webp" alt="" class="project__img" width="445" height="220">
+                            <img src="img/project-img9.webp" alt="" class="project__img" width="445" height="220">
                         </div>
                     </li>
                 </ul>
@@ -101,6 +101,6 @@
             </template>
         </div>
     </main>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
