--- a/index.html
+++ b/index.html
@@ -12,7 +12,29 @@
             <div class="header-content">
                 <div class="left-part">Yanushenko Kateryna</div>
                 <div class="right-part">
-                    <a href="mailto:yanushenkokateryna@gmail.com">yanushenkokateryna@gmail.com</a>
+                    <ul class="contacts-list">
+                        <li class="contacts-item">
+                            <a href="mailto:yanushenkokateryna@gmail.com" class="contacts-link">
+                                <svg class="contacts-icon">
+                                    <use xlink:href="#email"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="contacts-item">
+                            <a href="www.linkedin.com/in/yanushenkoekaterina" class="contacts-link">
+                                <svg class="contacts-icon">
+                                    <use xlink:href="#in"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="contacts-item">
+                            <a href="https://t.me/KatherynaYa" class="contacts-link">
+                                <svg class="contacts-icon">
+                                    <use xlink:href="#telegram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -101,6 +123,29 @@
             </template>
         </div>
     </main>
+    <svg style="display: none;">
+        <symbol id="fb" viewBox="0 0 24 24">
+            <path fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M6.182 10.333c-.978 0-1.182.192-1.182 1.111v1.667c0 .92.204 1.111 1.182 1.111h2.363v6.667c0 .92.205 1.111 1.182 1.111h2.364c.978 0 1.182-.192 1.182-1.111v-6.667h2.654c.741 0 .932-.135 1.136-.806l.507-1.666c.349-1.149.133-1.417-1.137-1.417h-3.16V7.556c0-.614.529-1.112 1.181-1.112h3.364c.978 0 1.182-.191 1.182-1.11V3.11C19 2.191 18.796 2 17.818 2h-3.364c-3.263 0-5.909 2.487-5.909 5.556v2.777z"/>
+        </symbol>
+        <symbol id="insta" viewBox="0 0 24 24">
+            <g fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5">
+                <path d="M2.5 12c0-4.478 0-6.718 1.391-8.109S7.521 2.5 12 2.5c4.478 0 6.718 0 8.109 1.391S21.5 7.521 21.5 12c0 4.478 0 6.718-1.391 8.109S16.479 21.5 12 21.5c-4.478 0-6.718 0-8.109-1.391S2.5 16.479 2.5 12"/>
+                <path d="M16.5 12a4.5 4.5 0 1 1-9 0a4.5 4.5 0 0 1 9 0m1.008-5.5h-.01"/>
+            </g>
+        </symbol>
+        <symbol id="in" viewBox="0 0 24 24">
+            <path fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M4.5 9.5H4c-.943 0-1.414 0-1.707.293S2 10.557 2 11.5V20c0 .943 0 1.414.293 1.707S3.057 22 4 22h.5c.943 0 1.414 0 1.707-.293S6.5 20.943 6.5 20v-8.5c0-.943 0-1.414-.293-1.707S5.443 9.5 4.5 9.5m2-5.25a2.25 2.25 0 1 1-4.5 0a2.25 2.25 0 0 1 4.5 0m5.826 5.25H11.5c-.943 0-1.414 0-1.707.293S9.5 10.557 9.5 11.5V20c0 .943 0 1.414.293 1.707S10.557 22 11.5 22h.5c.943 0 1.414 0 1.707-.293S14 20.943 14 20v-3.5c0-1.657.528-3 2.088-3c.78 0 1.412.672 1.412 1.5v4.5c0 .943 0 1.414.293 1.707s.764.293 1.707.293h.499c.942 0 1.414 0 1.707-.293c.292-.293.293-.764.293-1.706L22 14c0-2.486-2.364-4.5-4.703-4.5c-1.332 0-2.52.652-3.297 1.673c0-.63 0-.945-.137-1.179a1 1 0 0 0-.358-.358c-.234-.137-.549-.137-1.179-.137"/>
+        </symbol>
+        <symbol id="email" viewBox="0 0 24 24">
+             <g fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5">
+                <path d="m7 8.5l2.942 1.74c1.715 1.014 2.4 1.014 4.116 0L17 8.5"/>
+                <path d="M2.016 13.476c.065 3.065.098 4.598 1.229 5.733c1.131 1.136 2.705 1.175 5.854 1.254c1.94.05 3.862.05 5.802 0c3.149-.079 4.723-.118 5.854-1.254c1.131-1.135 1.164-2.668 1.23-5.733c.02-.986.02-1.966 0-2.952c-.066-3.065-.099-4.598-1.23-5.733c-1.131-1.136-2.705-1.175-5.854-1.254a115 115 0 0 0-5.802 0c-3.149.079-4.723.118-5.854 1.254c-1.131 1.135-1.164 2.668-1.23 5.733a69 69 0 0 0 0 2.952"/>
+            </g>
+        </symbol>
+        <symbol id="telegram" viewBox="0 0 24 24">
+            <path fill="none"  stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="m11.985 15.408l3.242 3.686c1.2 1.365 1.801 2.048 2.43 1.881c.628-.166.844-1.064 1.275-2.861l2.39-9.968c.665-2.768.997-4.151.259-4.834s-2.017-.175-4.575.84L5.14 8.865c-2.046.813-3.069 1.219-3.134 1.917a1 1 0 0 0 0 .214c.063.699 1.084 1.108 3.128 1.927c.925.371 1.388.557 1.72.912q.056.06.108.124c.306.38.436.88.697 1.876l.489 1.867c.253.97.38 1.456.713 1.522s.622-.336 1.201-1.141zm0 0l-.317-.33c-.362-.378-.543-.566-.543-.8s.18-.423.543-.8l3.573-3.724"/>
+        </symbol>
+    </svg>
     <script src="script.js"></script>
 </body>
 </html>
