--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <template class="js-popup-content-template" style="display: none;">
                 <h3 class="popup-headline"></h3>
                 <ul class="popup-technologies"></ul>
-                <a href="" class="popup-link">See work</a>
+                <a href="" class="popup-link" target="_blank">See work</a>
                 <img src="" alt="" class="popup-img">
             </template>
         </div>
