--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@
                         </div>
                     </li>
                     <li class="project">
+                        <div class="project__content" data-index="9" data-toggle="info-popup">
+                            <img src="img/project-img10.webp" alt="" class="project__img" width="445" height="220">
+                        </div>
+                    </li>
+                    <li class="project">
                         <div class="project__content" data-index="3" data-toggle="info-popup">
                             <img src="img/project-img4.webp" alt="" class="project__img" width="445" height="220">
                         </div>
