change popup info

--- a/index.html
+++ b/index.html
@@ -62,52 +62,52 @@
                 <ul class="projects-list">
                     <li class="project">
                         <div class="project__content" data-index="0" data-toggle="info-popup">
-                            <img src="img/project-img1.webp" alt="" class="project__img" width="445" height="220">
+                            <img src="img/project1/preview.webp" alt="" class="project__img" width="445" height="220">
                         </div>
                     </li>
                     <li class="project">
                         <div class="project__content" data-index="1" data-toggle="info-popup">
-                            <img src="img/project-img2.webp" alt="" class="project__img" width="445" height="220">
+                            <img src="img/project2/preview.webp" alt="" class="project__img" width="445" height="220">
                         </div>
                     </li>
                     <li class="project">
                         <div class="project__content" data-index="2" data-toggle="info-popup">
-                            <img src="img/project-img3.webp" alt="" class="project__img" width="445" height="220">
+                            <img src="img/project3/preview.webp" alt="" class="project__img" width="445" height="220">
                         </div>
                     </li>
                     <li class="project">
                         <div class="project__content" data-index="4" data-toggle="info-popup">
-                            <img src="img/project-img5.webp" alt="" class="project__img" width="445" height="220">
+                            <img src="img/project5/preview.webp" alt="" class="project__img" width="445" height="220">
                         </div>
                     </li>
                     <li class="project">
                         <div class="project__content" data-index="5" data-toggle="info-popup">
-                            <img src="img/project-img6.webp" alt="" class="project__img" width="445" height="220">
+                            <img src="img/project6/preview.webp" alt="" class="project__img" width="445" height="220">
                         </div>
                     </li>
                     <li class="project">
                         <div class="project__content" data-index="6" data-toggle="info-popup">
-                            <img src="img/project-img7.webp" alt="" class="project__img" width="445" height="220">
+                            <img src="img/project7/preview.webp" alt="" class="project__img" width="445" height="220">
                         </div>
                     </li>
                     <li class="project">
                         <div class="project__content" data-index="9" data-toggle="info-popup">
-                            <img src="img/project-img10.webp" alt="" class="project__img" width="445" height="220">
+                            <img src="img/project10/preview.webp" alt="" class="project__img" width="445" height="220">
                         </div>
                     </li>
                     <li class="project">
                         <div class="project__content" data-index="3" data-toggle="info-popup">
-                            <img src="img/project-img4.webp" alt="" class="project__img" width="445" height="220">
+                            <img src="img/project4/preview.webp" alt="" class="project__img" width="445" height="220">
                         </div>
                     </li>
                     <li class="project">
                         <div class="project__content" data-index="7" data-toggle="info-popup">
-                            <img src="img/project-img8.webp" alt="" class="project__img" width="445" height="220">
+                            <img src="img/project8/preview.webp" alt="" class="project__img" width="445" height="220">
                         </div>
                     </li>
                     <li class="project">
                         <div class="project__content" data-index="8" data-toggle="info-popup">
-                            <img src="img/project-img9.webp" alt="" class="project__img" width="445" height="220">
+                            <img src="img/project9/preview.webp" alt="" class="project__img" width="445" height="220">
                         </div>
                     </li>
                 </ul>
@@ -123,8 +123,9 @@
             <template class="js-popup-content-template" style="display: none;">
                 <h3 class="popup-headline"></h3>
                 <ul class="popup-technologies"></ul>
+                <div class="popup-imgs">
+                </div>
                 <a href="" class="popup-link" target="_blank">See work</a>
-                <img src="" alt="" class="popup-img">
             </template>
         </div>
     </main>
