add skills section

--- a/index.html
+++ b/index.html
@@ -56,6 +56,45 @@
                 </div>
             </div>
         </section>
+        <section class="skills">
+            <div class="container">
+                <h2 class="section-headline">My skills</h2>
+                <ul class="skills-list">
+                    <li class="skills-items">
+                        <span class="skills-name">HTML (Pug)</span>
+                        <progress max="100" value="85"></progress>
+                    </li>
+                    <li class="skills-items">
+                        <span class="skills-name">CSS (SASS)</span>
+                        <progress max="100" value="85"></progress>
+                    </li>
+                    <li class="skills-items">
+                        <span class="skills-name">Javascript</span>
+                        <progress max="100" value="65"></progress>
+                    </li>
+                    <li class="skills-items">
+                        <span class="skills-name">Jquery</span>
+                        <progress max="100" value="65"></progress>
+                    </li>
+                    <li class="skills-items">
+                        <span class="skills-name">React.js</span>
+                        <progress max="100" value="40"></progress>
+                    </li>
+                    <li class="skills-items">
+                        <span class="skills-name">Next.js</span>
+                        <progress max="100" value="40"></progress>
+                    </li>
+                    <li class="skills-items">
+                        <span class="skills-name">Gulp</span>
+                        <progress max="100" value="55"></progress>
+                    </li>
+                    <li class="skills-items">
+                        <span class="skills-name">Git</span>
+                        <progress max="100" value="65"></progress>
+                    </li>
+                </ul>
+            </div>
+        </section>
         <section class="projects">
             <div class="container">
                 <h2 class="section-headline">My works</h2>
