add projects imgs

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     </li>
                     <li class="skills-items">
                         <span class="skills-name">Jquery</span>
-                        <progress max="100" value="65"></progress>
+                        <progress max="100" value="85"></progress>
                     </li>
                     <li class="skills-items">
                         <span class="skills-name">React.js</span>
@@ -98,22 +98,8 @@
         <section class="projects">
             <div class="container">
                 <h2 class="section-headline">My works</h2>
+                <h3 class="list-headline">HTML, CSS, Javascript</h3>
                 <ul class="projects-list">
-                    <li class="project">
-                        <div class="project__content" data-index="0" data-toggle="info-popup">
-                            <img src="img/project1/preview.webp" alt="" class="project__img" width="445" height="220">
-                        </div>
-                    </li>
-                    <li class="project">
-                        <div class="project__content" data-index="1" data-toggle="info-popup">
-                            <img src="img/project2/preview.webp" alt="" class="project__img" width="445" height="220">
-                        </div>
-                    </li>
-                    <li class="project">
-                        <div class="project__content" data-index="2" data-toggle="info-popup">
-                            <img src="img/project3/preview.webp" alt="" class="project__img" width="445" height="220">
-                        </div>
-                    </li>
                     <li class="project">
                         <div class="project__content" data-index="4" data-toggle="info-popup">
                             <img src="img/project5/preview.webp" alt="" class="project__img" width="445" height="220">
@@ -130,8 +116,18 @@
                         </div>
                     </li>
                     <li class="project">
-                        <div class="project__content" data-index="9" data-toggle="info-popup">
-                            <img src="img/project10/preview.webp" alt="" class="project__img" width="445" height="220">
+                        <div class="project__content" data-index="0" data-toggle="info-popup">
+                            <img src="img/project1/preview.webp" alt="" class="project__img" width="445" height="220">
+                        </div>
+                    </li>
+                    <li class="project">
+                        <div class="project__content" data-index="1" data-toggle="info-popup">
+                            <img src="img/project2/preview.webp" alt="" class="project__img" width="445" height="220">
+                        </div>
+                    </li>
+                    <li class="project">
+                        <div class="project__content" data-index="2" data-toggle="info-popup">
+                            <img src="img/project3/preview.webp" alt="" class="project__img" width="445" height="220">
                         </div>
                     </li>
                     <li class="project">
@@ -147,6 +143,11 @@
                     <li class="project">
                         <div class="project__content" data-index="8" data-toggle="info-popup">
                             <img src="img/project9/preview.webp" alt="" class="project__img" width="445" height="220">
+                        </div>
+                    </li>
+                    <li class="project">
+                        <div class="project__content" data-index="9" data-toggle="info-popup">
+                            <img src="img/project10/preview.webp" alt="" class="project__img" width="445" height="220">
                         </div>
                     </li>
                 </ul>
