--- a/index.html
+++ b/index.html
@@ -145,11 +145,11 @@
                             <img src="img/project9/preview.webp" alt="" class="project__img" width="445" height="220">
                         </div>
                     </li>
-                    <!-- <li class="project">
+                    <li class="project">
                         <div class="project__content" data-index="9" data-toggle="info-popup">
                             <img src="img/project10/preview.webp" alt="" class="project__img" width="445" height="220">
                         </div>
-                    </li> -->
+                    </li>
                 </ul>
             </div>
         </section>
