correction link on in

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                             </a>
                         </li>
                         <li class="contacts-item">
-                            <a href="www.linkedin.com/in/yanushenkoekaterina" class="contacts-link">
+                            <a href="https://www.linkedin.com/in/yanushenkoekaterina" class="contacts-link">
                                 <svg class="contacts-icon">
                                     <use xlink:href="#in"></use>
                                 </svg>
