--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="header-content">
                 <div class="left-part">Kateryna Yanushenko</div>
                 <div class="right-part">
-                    <ul class="contacts-list">
+                    <!-- <ul class="contacts-list">
                         <li class="contacts-item">
                             <a href="mailto:yanushenkokateryna@gmail.com" class="contacts-link">
                                 <svg class="contacts-icon">
@@ -34,7 +34,7 @@
                                 </svg>
                             </a>
                         </li>
-                    </ul>
+                    </ul> -->
                 </div>
             </div>
         </div>
@@ -44,7 +44,7 @@
             <div class="container">
                 <div class="hero__content">
                     <div class="hero__photo">
-                        <img src="img/20240616_205740(1).jpg" alt="" class="hero__photo-img">
+                        <img src="img/photo_2025-07-07_10-35-17.jpg" alt="" class="hero__photo-img">
                     </div>
                     <div class="hero__about">
                         <h1>A little about me</h1>
