add new project

--- a/index.html
+++ b/index.html
@@ -151,6 +151,14 @@
                         </div>
                     </li>
                 </ul>
+                <h3 class="list-headline">React, Next</h3>
+                <ul class="projects-list">
+                    <li class="project">
+                        <div class="project__content" data-index="10" data-toggle="info-popup">
+                            <img src="img/project11/preview.webp" alt="" class="project__img" width="445" height="220">
+                        </div>
+                    </li>
+                </ul>
             </div>
         </section>
         <div class="info-popup js-info-popup">
