--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="header-content">
                 <div class="left-part">Kateryna Yanushenko</div>
                 <div class="right-part">
-                    <!-- <ul class="contacts-list">
+                    <ul class="contacts-list">
                         <li class="contacts-item">
                             <a href="mailto:yanushenkokateryna@gmail.com" class="contacts-link">
                                 <svg class="contacts-icon">
@@ -34,7 +34,7 @@
                                 </svg>
                             </a>
                         </li>
-                    </ul> -->
+                    </ul>
                 </div>
             </div>
         </div>
@@ -98,6 +98,14 @@
         <section class="projects">
             <div class="container">
                 <h2 class="section-headline">My works</h2>
+                <h3 class="list-headline">React, Next</h3>
+                <ul class="projects-list">
+                    <li class="project">
+                        <div class="project__content" data-index="10" data-toggle="info-popup">
+                            <img src="img/project11/preview.webp" alt="" class="project__img" width="445" height="220">
+                        </div>
+                    </li>
+                </ul>
                 <h3 class="list-headline">HTML, CSS, Javascript</h3>
                 <ul class="projects-list">
                     <li class="project">
@@ -148,14 +156,6 @@
                     <li class="project">
                         <div class="project__content" data-index="9" data-toggle="info-popup">
                             <img src="img/project10/preview.webp" alt="" class="project__img" width="445" height="220">
-                        </div>
-                    </li>
-                </ul>
-                <h3 class="list-headline">React, Next</h3>
-                <ul class="projects-list">
-                    <li class="project">
-                        <div class="project__content" data-index="10" data-toggle="info-popup">
-                            <img src="img/project11/preview.webp" alt="" class="project__img" width="445" height="220">
                         </div>
                     </li>
                 </ul>
