change hero text

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
                     </div>
                     <div class="hero__about">
                         <h1>A little about me</h1>
-                        <p>Hi, my name is Katya, and I have been doing website layout and front-end development for over 10 years.</p>
-                        <p> I love my job very much and I believe that this is what helps me to perform my tasks efficiently and responsibly. I always try to follow the changes in the profession to keep abreast of all the interesting and new things in css, html and, of course, javascript)).  In my work I use modern approaches to development, which makes it more reliable and convenient to work with. </p>
-                        <p>From time to time, I experiment with css properties to better understand how they work and what beauty can be done with them.  I have made several simple projects in React.js. At the moment, I'm learning more about React.js.</p> 
-                        <p>You can see some of my experiments and works on this page.</p>
+                        <p>Hi, my name is Katya, and I have been working in website layout and front-end development for over 10 years.</p>
+                        <p>I truly enjoy what I do, and I believe this passion helps me approach my work responsibly and efficiently. I always keep an eye on changes in the industry to stay up to date with new and interesting things in CSS, HTML, and, of course, JavaScript. In my work, I rely on modern development approaches, which makes solutions more reliable, maintainable, and comfortable to work with.</p>
+                        <p>Alongside strong experience in layout and UI development, I actively work with React.js, building small to medium-sized projects and reusable components. I am confident with core React concepts and continue to deepen my expertise, focusing on best practices, performance, and clean architecture. I also have experience working with Next.js, including routing, page structure, and basic optimizations, and I use it in my projects when it fits the task best.</p>
+                        <p>From time to time, I experiment with CSS properties and techniques to better understand how they work and explore new visual possibilities. You can see some of my experiments and projects on this page.</p>
                     </div>
                 </div>
             </div>
